# imagination

./: .gitignore  AUTHORS  ChangeLog  FAQ  Makefile.am  NEWS  README  autogen.sh  cairo_image.raw  commit  config.h.in  configure.ac  imagination.1  imagination.desktop.in  imagination.xml  libavtest.img
doc/: imagination.xsl
doc/en/: imagination.xml.in
doc/es/: imagination.xml.in
doc/fr/: imagination.xml.in
doc/pt_BR/: imagination.xml.in
icons/: Makefile.am
po/: .intltool-merge-cache  ChangeLog  LINGUAS  Makevars  POTFILES.in  ca.po  cs.po  de.po  en_GB.po  en_GB_no_fuzzy.po  es.po  fr.po  fr.po.rej  it.po  ja.po  ku.po  pt_BR.po  ru.po  sl_SI.po  sv.po  zh_CN.po  zh_TW.po
src/: Makefile.am  Makefile.in.back  audio.c  audio.h  callbacks.c  callbacks.h  empty_slide.c  empty_slide.h  export.c  export.h  file.c  file.h  imagination.c  imagination.h  img_timeline.c  img_timeline.h  imgcellrendereranim.c  imgcellrendereranim.h  imgcellrendererpixbuf.c  imgcellrendererpixbuf.h  main-window.c  main-window.h  new_project.c  new_project.h  new_slideshow.c  new_slideshow.h  slideshow_project.c  slideshow_project.h  subtitles.c  subtitles.h  subtitles2.c  support.c  support.h  text.c  text.h
tests/: lib.py  run_tests.sh  test_badfile.py  test_exif.py  test_main.py
transitions/: bar_wipe.c  barn_door_wipe.c  bow_tie_wipe.c  box_wipe.c  clock_wipe.c  diagonal_wipe.c  ellipse_wipe.c  four_box_wipe.c  insert.c  misc.c  misc_diagonal_wipe.c  misc_shape_wipe.c  push_wipe.c  rochade.c  wave.c
